# cms_hack_pytorch

./: CMakeLists.txt  test_torch.cpp
